# Meridian_backend

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  RUNBOOK.md  docker-compose.override.yml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: main.py
app/api/: deps.py  errors.py  rate_limit.py
app/api/routers/: alerts.py  assets.py  auth.py  cb.py  chokepoints.py  commodities.py  datasources.py  fx.py  geo.py  health.py  jobs.py  macro.py  policy.py  portfolio.py  ports.py  rates.py  risk.py  trade.py  v1.py  watchlist.py
app/api/schemas/: alerts.py  common.py  portfolio.py  watchlist.py
app/core/: cache.py  config.py  db.py  logging.py  security.py  telemetry.py  tracing.py
app/db/: models.py  mongo.py  pg.py  redis.py
app/db/migrations/: alembic.ini  env.py
app/db/migrations/versions/: 0001_enable_timescale.py  0002_add_user_api_key_tables.py  0003_add_portfolio_watchlist_alert_tables.py  0004_add_series_and_factor_tables.py  (+1 more)
app/scheduler/: scheduler.py
app/scheduler/jobs/: datasource_check.py  heartbeat.py  risk_metrics.py
app/services/: auth_service.py  datasource_service.py  job_service.py
infra/docker/: api.Dockerfile
infra/systemd/: meridian.service  portfolio.service
ingestion/adapters/: __init__.py  aisstream.py  base.py  bdi_scraper.py  boe_rss.py  cboe_vix.py  comtrade.py  ecb_rss.py  eia.py  fed_rss.py  federal_register.py  file_scraper.py  fred.py  gdelt_events.py  gdelt_mentions.py  reliefweb.py  rest_json.py  rss.py  sec.py  websocket.py  worldbank.py  yfinance.py
ingestion/loaders/: postgres.py
ingestion/metrics/: news.py
ingestion/registry/: __init__.py  data_registry.yaml  datasets.yaml
ingestion/scheduler/: backfill.py  jobs.py  run.py
ingestion/tests/: test_registry.py  test_scheduler.py
ingestion/tests/api/: test_assets.py
ingestion/transforms/: commodities.py  geopolitics.py  logistics.py  macro.py  markets.py  news.py  policy.py
risk_engine/: __init__.py  cascade.py  edges.py  volatility.py
scripts/: wait_for_services.sh
sql/: 001_init.sql  002_indexes.sql
tests/: conftest.py  test_models.py
tests/api/: test_alerts.py  test_auth.py  test_cb.py  test_commodities.py  test_factors_edges.py  test_fx.py  test_geo.py  test_health.py  test_macro.py  test_policy.py  test_portfolio.py  test_ports.py  test_rates.py  test_risk.py  test_security.py  test_trade.py  test_watchlist.py
tests/db/: test_connections.py
tests/ingestion/: test_adapters.py  test_news_density.py  test_postgres_loader.py
tests/observability/: test_logging.py
tests/risk/: test_factor_connections.py  test_volatility.py
tests/scheduler/: test_dummy.py  test_jobs.py
tests/services/: test_auth_service.py
tests/unit/: test_transforms.py
tests/unit/golden/: ais.json  commodities.json  geopolitics.json  logistics.json  macro.json  markets.json  policy.json
