[tool.poetry]
name = "meridian-backend"
version = "0.1.0"
description = "Foundation phase analytics platform backend"
authors = ["Meridian Team <team@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
requests = "^2.32.3"
pydantic = "^2.7.4"
pydantic-settings = "^2.2.1"
sqlalchemy = "^2.0.29"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
motor = "^3.4.0"
redis = "^5.0.3"
apscheduler = "^3.10.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["argon2"], version = "^1.7.4"}
httpx = "^0.27.0"
feedparser = "^6.0.11"
websockets = "^12.0"
tenacity = "^8.3.0"
pandas = "^2.2.2"
yfinance = "^0.2.40"
python-multipart = "^0.0.9"
alembic = "^1.13.1"
prometheus-client = "^0.19.0"
opentelemetry-instrumentation-fastapi = "^0.47b0"
opentelemetry-sdk = "^1.26.0"
opentelemetry-exporter-otlp = "^1.26.0"
sentry-sdk = "^1.40.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
mypy = "^1.10.0"
ruff = "^0.5.6"
black = "^24.4.2"
bandit = "^1.7.9"
pre-commit = "^3.7.1"
types-requests = "^2.32.0.20240712"
types-psycopg2 = "^2.9.21.20241019"
pytest-asyncio = "^0.23.5"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

